welcome.lessons.welcome.array.array123.Array123.scala.error
array123:4: error: not found: value i
    i=j+1
    ^array123:5: error: not found: value k
    k=j+2
    ^array123:6: error: not found: value i
    if (nums(j)==1 && nums(i)==2 && nums(k)==3 ) {
                           ^array123:6: error: not found: value k
    if (nums(j)==1 && nums(i)==2 && nums(k)==3 ) {
                                         ^