welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
  var L :Int = nums.length
  for (j <- 0 to L-1) {
    i=j+1
    k=j+2
    if (nums(j)==1 && nums(i)==2 && nums(k)==3 ) {
      return true
    }
  }
  return false

} 